--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=project
+server.port=8082
+spring.data.mongodb.uri=${MONGO_DB_URI}
+spring.security.user.password="divyesh_password"
