--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=project
 server.port=8082
 spring.data.mongodb.uri=${MONGO_DB_URI}
+spring.data.mongodb.auto-index-creation=true
