--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'org.jetbrains.kotlin.jvm'
     id 'org.jetbrains.kotlin.plugin.spring' version '1.9.10'
     id 'org.jetbrains.kotlin.plugin.jpa' version '1.9.10'
+    id 'org.sonarqube' version '5.1.0.4882'
 }
 
 group = 'com.spring'
@@ -52,6 +53,15 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+}
+
+sonarqube {
+    properties {
+        property "sonar.host.url", "http://localhost:9000"
+        property "sonar.token", ""  // New property name
+        // OR use the deprecated one:
+        // property "sonar.login", "your-generated-token-here"
+    }
 }
 
 tasks.named('test') {
