Add WeatherService and QuotesService; update application configuration for API keys

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -11,3 +11,8 @@ server:
 
 logging:
   level.com.spring.project: debug
+
+api:
+  keys:
+    weather: ${WEATHER_API_KEY}
+    quotes: ${QUOTES_API_KEY}
