--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -7,3 +7,8 @@ spring:
       auto-index-creation: true
 server:
   port: 8082
+
+api:
+  keys:
+    weather: ${WEATHER_API_KEY}
+    quotes: ${QUOTES_API_KEY}
