--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,6 +5,9 @@ spring:
     mongodb:
       uri: ${MONGO_DB_URI}
       auto-index-creation: true
+    redis:
+      host: localhost
+      port: 6379
   mail:
     port: 587
     username: divyeshjivani10@gmail.com
