--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -6,8 +6,7 @@ spring:
       uri: ${MONGO_DB_URI}
       auto-index-creation: true
     redis:
-      host: localhost
-      port: 6379
+      url: ${REDIS_DB_URI}
   mail:
     port: 587
     username: divyeshjivani10@gmail.com
